Fix bug: cover photo not responsive

--- a/assets/scss/custom-style.scss
+++ b/assets/scss/custom-style.scss
@@ -3,7 +3,7 @@
 /* Size of cover image in post */
 .post_thumbnail {
   // Following excerpted from _posts.scss
-  max-width: 1024px !important;
+
   margin-left: auto;
   margin-right: auto;
   display: flex;
